--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
-welcome.message= Welcome to Spring cloud config server
-
+emp.welcome.message= Welcome to Spring cloud config server
+app.service.url=http://localhost:9090/getMail
